@@ -50,6 +50,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6598: Increased time precision and random number range in
+  email.utils.make_msgid() to strengthen the uniqueness of the message ID.
+
 - Issue #24091: Fixed various crashes in corner cases in C implementation of
   ElementTree.
 
